php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #35908 GCRY_THREAD_OPTIONS_USER in ext/curl/interface.c causes compile failure
Submitted: 2006-01-05 18:47 UTC Modified: 2006-01-05 19:09 UTC
From: chtekk at gentoo dot org Assigned:
Status: Closed Package: Compile Failure
PHP Version: 5.1.1 OS: Gentoo Linux
Private report: No CVE-ID: None
 [2006-01-05 18:47 UTC] chtekk at gentoo dot org
Description:
------------
We had a few users having problems to compile PHP 5.1.1 on Gentoo, it failed during the compilation of interface.c in ext/curl. http://bugs.gentoo.org/show_bug.cgi?id=117767 has all the details. After some investigation it turned up that indeed GCRY_THREAD_OPTIONS_USER (found in interface.c) is not defined anywhere in PHP and in the system,further search confirmed the solution the user proposed: GCRY_THREAD_OPTION_USER (without the S after OPTION) seems to be the correct function, wich gets defined in /usr/include/gcrypt.h (libgcrypt). To fix, just change GCRY_THREAD_OPTIONS_USER to GCRY_THREAD_OPTION_USER.
Best regards, CHTEKK.

Expected result:
----------------
Compilation goes without problems.

Actual result:
--------------
Compilation fails.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-01-05 19:09 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC