Fixed bug #35908 (curl extension uses undefined GCRY_THREAD_OPTIONS_USER).